fixed header top shadow

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <figure class="head__img-wrap">
         <img class="head__img-shadow" src="img/shadow.png" alt="shadow">
         <img src="img/head.jpg" alt="Hot Dog photo from instagram 1" class="head__img">
-        <span class="head__insta-wrap">
+        <a class="head__insta-wrap" href="https://www.instagram.com/">
           <img src="img/icon-inst.jpg" alt="insta logo" class="head__insta-logo">
           <p class="head__insta-text">#hotdogs</p>
-        </span>
+        </a>
       </figure>
     </section>
     <section class="nav">
