Added semantich tags to footer

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
       </div>
     </section>
     <section class="footer">
-      <p class="footer__content">® 2016 Dirty Dogs all rights reserved</p>
-      <p class="footer__content">274 Marconi Blvd. Columbus, Ohio 43215 | 614.538.0095 | <a class="footer__link" href="#">Contact us</a></p>
+      <small class="footer__content"> ® 2016 Dirty Dogs all rights reserved</small>
+      <address class="footer__content">274 Marconi Blvd. Columbus, Ohio 43215 | 614.538.0095 | <a class="footer__link" href="#">Contact us</a></address>
     </section>
   </div>
 </body>
